# optimum_testtask

./: .gitignore  pyproject.toml
optimum_scrape/: scrapy.cfg
optimum_scrape/optimum_scrape/: items.py  middlewares.py  pipelines.py  settings.py
optimum_scrape/optimum_scrape/spiders/: test_spider.py
