[tool.poetry]
name = "optimum-testtask"
version = "0.1.0"
description = ""
authors = ["Roman Kalashnikov <roman.kalashnikov.kazan@gmail.com>"]
readme = "README.md"
packages = [{include = "optimum_testtask"}]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
